Replacing current 5.6.1 with 5.7.2 (again, this time at the right place)